<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bebas_neue_bold"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="24dp"
        android:text="@string/help_centre"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <TextView
        android:id="@+id/text_how_to_pay"
        style="@style/TextViewMontserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableRight="@drawable/ic_path"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingTop="23dp"
        android:paddingEnd="16dp"
        android:paddingBottom="23dp"
        android:textColor="@color/black"
        android:text="@string/how_to_pay"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <TextView
        android:id="@+id/text_about_us"
        style="@style/TextViewMontserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableRight="@drawable/ic_path"
        android:focusable="true"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:paddingTop="23dp"
        android:paddingEnd="16dp"
        android:paddingBottom="23dp"
        android:text="@string/about_us"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <TextView
        android:id="@+id/text_terms"
        style="@style/TextViewMontserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableRight="@drawable/ic_path"
        android:focusable="true"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:paddingTop="23dp"
        android:paddingEnd="16dp"
        android:paddingBottom="23dp"
        android:text="@string/terms_conditions"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <TextView
        android:id="@+id/text_privacy"
        style="@style/TextViewMontserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableRight="@drawable/ic_path"
        android:focusable="true"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:paddingTop="23dp"
        android:paddingEnd="16dp"
        android:paddingBottom="23dp"
        android:text="@string/privacy_policy"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>