<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font_bebas_neue_bold"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingTop="25dp"
            android:paddingBottom="24dp"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/font_bebas_neue_bold"
            android:paddingStart="8dp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/button_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="23dp"
            android:paddingEnd="16dp"
            android:paddingBottom="2dp"
            android:text="@string/billing_address"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="2dp"
            android:paddingEnd="16dp"
            android:paddingBottom="23dp"
            android:text="@string/you_have_not_billing_address"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="23dp"
            android:paddingEnd="16dp"
            android:paddingBottom="2dp"
            android:text="@string/shipping_address"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="2dp"
            android:paddingEnd="16dp"
            android:paddingBottom="23dp"
            android:text="@string/you_have_not_shipping_address"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>