<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bebas_neue_bold"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="24dp"
        android:text="@string/gender_please_select_one"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="23dp"
            android:paddingEnd="16dp"
            android:paddingBottom="23dp"
            android:text="@string/male"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="23dp"
            android:paddingEnd="16dp"
            android:paddingBottom="23dp"
            android:text="@string/female"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewMontserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="23dp"
            android:paddingEnd="16dp"
            android:paddingBottom="23dp"
            android:text="@string/non_binary"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_non_binary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

</LinearLayout>