<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_header"
                style="@style/TextViewMontserratBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_montserrat_bold"
                android:gravity="center"
                android:paddingTop="26dp"
                android:paddingBottom="26dp"
                android:text="@string/change_password"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/font_montserrat_bold"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/underline_old_password_error"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/font_montserrat_bold"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_dark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/font_montserrat_bold"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/underline_new_password_error"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/font_montserrat_bold"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_dark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/font_montserrat_bold"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/underline_repeat_password_error"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/font_montserrat_bold"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_change_password"
        style="@style/ButtonTint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_password" />

</LinearLayout>